--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mesopotamia Solar - {% block title %}{% endblock %}</title>
+    <title>{% block title %}Mesopotamia Solar{% endblock %}</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
@@ -37,12 +37,29 @@
         >
           <span class="hamburger">☰</span>
         </button>
-
         <nav class="main-nav">
           <ul class="nav-links">
-            <li><a href="{{ url_for('home') }}">Home</a></li>
-            <li><a href="{{ url_for('about') }}">About</a></li>
-            <li><a href="{{ url_for('contact') }}">Contact</a></li>
+            <li>
+              <a
+                href="{{ url_for('home') }}"
+                class="{{ 'active' if request.endpoint == 'home' }}"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="{{ url_for('about') }}"
+                class="{{ 'active' if request.endpoint == 'about' }}"
+                >About</a
+              >
+            </li>
+            <li>
+              <a
+                href="{{ url_for('contact') }}"
+                class="{{ 'active' if request.endpoint == 'contact' }}"
+                >Contact</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
