--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,11 +23,11 @@
     <button type="submit" class="cta-button">Send Message</button>
   </form>
 
-  <p class="support-text">
-    Need Help? Email us at:
+  <div class="email-support">
+    <p>Need Help?</p>
     <a href="mailto:support@mesopotamiasolar.com"
       >support@mesopotamiasolar.com</a
     >
-  </p>
+  </div>
+  {% endblock %}
 </div>
-{% endblock %}
